Update documentation with removal of OC

--- a/web/themes/citizen_patterns/components/_meta/_01-foot.twig
+++ b/web/themes/citizen_patterns/components/_meta/_01-foot.twig
@@ -29,7 +29,7 @@
   </script>
 
   <script>
-    $(".field-oc-long-text table").once('stack').each(function(){  
+    $(".text-long table").once('stack').each(function(){  
         $(this).cardtable({myClass:'responsive-table'});
         $(document).ajaxComplete(function() {
             $('.layout-container table').cardtable({myClass:'responsive-table'});
