--- a/web/themes/citizen_patterns/components/_patterns/documentation/00-documentation-guide/00-sections.twig
+++ b/web/themes/citizen_patterns/components/_patterns/documentation/00-documentation-guide/00-sections.twig
@@ -91,6 +91,7 @@
 	<li><h5>Per Site Customization</h5>
 		<ol type="A">
 			<li><a href="#site-specific-colors">Site Specific Colors</a></li>
+			<li><a href="#site-specific-fonts">Site Specific Fonts</a></li>
 			<li><a href="#site-specific-logo">Logo & Favicon</a></li>
 			<li><a href="#site-specific-elements">New Elements</a></li>
 		</ol>
@@ -116,7 +117,6 @@
 			<li><a href="#quick-reference">Quick Reference</a></li>
 			<li><a href="#drush-commands">Drush Commands</a></li>
 			<li><a href="#trouble">Troubleshooting</a></li>
-			<li><a href="#site-building">Site Building Quick Guide</a></li>
 		</ol>
 	</li>
 
