--- a/web/themes/citizen_patterns/components/_patterns/documentation/02-running-the-theme/00-npm-start.twig
+++ b/web/themes/citizen_patterns/components/_patterns/documentation/02-running-the-theme/00-npm-start.twig
@@ -12,13 +12,13 @@
 		<h4 class="doc-section-title">Task Runners</h4>
 		<div class="doc-section-inner">
 			<p><a href="https://gulpjs.com/" target="_blank">Gulp</a> and <a href="https://gruntjs.com/" target="_blank">Grunt</a> are common task runners. that function very similar to NPM scripts and either can be used on its own, or in combination with NPM scripts to run theme tasks.</p>
-			<p>OC Patterns takes advantage of both NPM and Gulp in order to power the theme tasks. Gulp allows use to specify unique tasks that expand npm modules installed by the theme. CRunning those tasks from a single npm command allows us to concurrently run different tasks without having to enter and re-enter multiple Gulp commands.</p>
+			<p>Citizen Patterns takes advantage of both NPM and Gulp in order to power the theme tasks. Gulp allows use to specify unique tasks that expand npm modules installed by the theme. CRunning those tasks from a single npm command allows us to concurrently run different tasks without having to enter and re-enter multiple Gulp commands.</p>
 		</div>
 	</div>
 	<div class="doc-section">
-		<h4 class="doc-section-title">OC Patterns NPM Start</h4>
+		<h4 class="doc-section-title">Citizen Patterns NPM Start</h4>
 		<div class="doc-section-inner">
-			<p>After install (install instructions in theme ReadMe), OC Patterns is run using a single command line command: <strong>npm start</strong> run in the theme root folder. NPM Start kicks off these Gulp tasks:
+			<p>After install (install instructions in theme ReadMe), Citizen Patterns is run using a single command line command: <strong>npm start</strong> run in the theme root folder. NPM Start kicks off these Gulp tasks:
 			<ol>
 				<li>Gulp Clean</li>
 				<li>Gulp Compile</li>
