--- a/web/themes/citizen_patterns/components/_patterns/documentation/03-theme-file-structure/00-atomic-order.twig
+++ b/web/themes/citizen_patterns/components/_patterns/documentation/03-theme-file-structure/00-atomic-order.twig
@@ -4,7 +4,7 @@
 	<div class="doc-section">
 		<h4 class="doc-section-title">Atomic Design Principles</h4>
 		<div class="doc-section-inner">
-			<p>OC Patterns is an uses an <a href="http://patternlab.io/" target="_blank">atomic design</a> approach to theming. Atomic design is a system for developing a component-based design from the smallest element to the largest.</p>
+			<p>Citizen Patterns is an uses an <a href="http://patternlab.io/" target="_blank">atomic design</a> approach to theming. Atomic design is a system for developing a component-based design from the smallest element to the largest.</p>
 			<p>
 				<strong>The Atomic Order:</strong></br>
 				<ul>
@@ -19,10 +19,10 @@
 		</div>
 	</div>
 	<div class="doc-section">
-		<h4 class="doc-section-title">OC Patterns Atomic File Structure</h4>
+		<h4 class="doc-section-title">Citizen Patterns Atomic File Structure</h4>
 		<div class="doc-section-inner">
 			<p>
-				<strong>The OC Atomic Order:</strong></br>
+				<strong>The Citizen Atomic Order:</strong></br>
 				<ul class="spaced two-col-vert">
 					<li>Global
 						<ol type="A">
@@ -67,7 +67,7 @@
 							<li>Nodes</li>
 							<li>Search</li>
 							<li>Taxonomy</li>
-							<li>Pages.scss (custom, non-panelizer, front pages)</li>
+							<li>Pages.scss (custom, non-node, front pages)</li>
 						</ol>
 					</li>
 					<li>Site Wide
