--- a/web/themes/citizen_patterns/components/_patterns/documentation/08-accessibility/01-color-contrast.twig
+++ b/web/themes/citizen_patterns/components/_patterns/documentation/08-accessibility/01-color-contrast.twig
@@ -1,4 +1,4 @@
-<a name="access-colors" id="access-colors"></a>
+<a name="access-color" id="access-color"></a>
 
 <div class="doc-text">
 	<div class="doc-section">
