--- a/web/themes/citizen_patterns/components/_patterns/documentation/14-additional-resources/02-troubleshooting.twig
+++ b/web/themes/citizen_patterns/components/_patterns/documentation/14-additional-resources/02-troubleshooting.twig
@@ -1,10 +1,10 @@
-<a name="drush-commands" id="drush-commands"></a>
+<a name="trouble" id="trouble"></a>
 
 <div class="doc-text">
 	<div class="doc-section">
 		<h4 class="doc-section-title">Troubleshooting</h4>
 		<div class="doc-section-inner">
-			<p>OC Patterns normally is pretty bulletproof if you are using the most recent versions of npm and node.js. If you do run into trouble when either installing the theme or running (npm start), follow these steps:</p>
+			<p>Citizen Patterns normally is pretty bulletproof if you are using the most recent versions of npm and node.js. If you do run into trouble when either installing the theme or running (npm start), follow these steps:</p>
 			<p><ol class="spaced">
 				<li><strong>Update to the most recent version of npm and node.js—</strong> Since this theme is based on <a href="https://github.com/fourkitchens/emulsify" target="_blank">Four Kitchens Emulsify</a> it is best to run the most current versions of both npm and node.js in order to stay even with dependency needs.</li>
 				<li><strong>Make sure non of you files are misnamed or contain incorrect syntax—</strong> ES Lint (JS Linting) will cause the theme to quit running if it detects a JS error. It will give you the error and line to fix. New files (SCSS, JS & Twig) will also often cause the theme to quite running. Clear the site cache and re-run <span class="code">npm start</span>. Twig syntax/variable errors will often cause a white screen with a fatal error message. use the Recent Log Messages report (Config > Reports) to get the specific Twig error, fix it and clear cache.</li>
