--- a/web/themes/citizen_patterns/components/_patterns/documentation/08-accessibility/00-accessibility-overview.twig
+++ b/web/themes/citizen_patterns/components/_patterns/documentation/08-accessibility/00-accessibility-overview.twig
@@ -4,7 +4,7 @@
 	<div class="doc-section">
 		<h4 class="doc-section-title">Web Accessibility</h4>
 		<div class="doc-section-inner">
-			<p><a href="https://www.w3.org/standards/webdesign/accessibility" target="_blank">Web Accessibility</a> is a huge push in modern web development and design. The web should be equally accessible to all people—no matter they ability or disability. OC Patterns strives to make every site as accessible as possible.</p>
+			<p><a href="https://www.w3.org/standards/webdesign/accessibility" target="_blank">Web Accessibility</a> is a huge push in modern web development and design. The web should be equally accessible to all people—no matter they ability or disability. Citizen Patterns strives to make every site as accessible as possible.</p>
 			<p>Since Electric Citizen works primarily in the public and university sector—accessibility double important to both us and our clients. We are constantly striving for improvement in any area of accessibility.</p>
 			<p>
 				<h5>Key Development Areas for Accessibility:</h5>
