--- a/web/themes/citizen_patterns/components/_patterns/documentation/08-accessibility/02-aria.twig
+++ b/web/themes/citizen_patterns/components/_patterns/documentation/08-accessibility/02-aria.twig
@@ -7,7 +7,8 @@
 			<p><a href="https://www.w3.org/WAI/intro/aria" target="_blank">Aria standards</a> should be used whenever possible. Drupal assigns many of these standards in the core templates and functionality but it is the responsibility of the developer to implement them when customizing the site.</p>
 			<p>Aria Standards:
 				<ul>
-					<li>Roles for widget types</li>
+					<li>Aria Labels for all form elements</li>
+					<li>Unique identifies for all elements</li>
 					<li>Roles to describe the structure of layouts.</li>
 					<li>Properties to describe the state of elements (checked, aria-expanded, has-popup, etc)</li>
 					<li>A way to access these elements through the keyboard.</li>
