--- a/web/themes/citizen_patterns/components/_patterns/documentation/09-drupal-integration/00-drupal-overview.twig
+++ b/web/themes/citizen_patterns/components/_patterns/documentation/09-drupal-integration/00-drupal-overview.twig
@@ -4,8 +4,8 @@
 	<div class="doc-section">
 		<h4 class="doc-section-title"></h4>
 		<div class="doc-section-inner">
-			<p>Pattern Lab works alongside Drupal but is not actually a part of Drupal. In order for Drupal to pick up what Pattern Lab is throwing down, OC Patterns needs to let Drupal now to use the files and templates living in Pattern Lab and the /dist folder it is being compiled into.</p>
-			<p><strong>OC Patterns Info File—</strong> This is main file that tells Drupal where to look for Pattern Lab elements. Global/font libraries, CKEditor stylesheets, theme Block Layout regions, and the Component Libraries are all outlined in citizen_patterns.info.yml</p>
+			<p>Pattern Lab works alongside Drupal but is not actually a part of Drupal. In order for Drupal to pick up what Pattern Lab is throwing down, Citizen Patterns needs to let Drupal now to use the files and templates living in Pattern Lab and the /dist folder it is being compiled into.</p>
+			<p><strong>Citizen Patterns Info File—</strong> This is main file that tells Drupal where to look for Pattern Lab elements. Global/font libraries, CKEditor stylesheets, theme Block Layout regions, and the Component Libraries are all outlined in citizen_patterns.info.yml</p>
 			<p><strong>Global/Font libraries—</strong> These are defined in citizen_patterns.libraries.yml and tell the theme (and thus Drupal) where to find style.css sheet (that all the Scss files get compiled into) as well as the global JS files and core dependencies.</p>
 			<p><strong>CKEditor Stylesheets—</strong> Tells Drupal where to find the CKEditor (WYSIWYG) stylesheet. This stylesheet needs to be update for any new WYSIWYG styles added to a site and to reflect the site-wide body font.</p>
 			<p><strong>Block Layout Regions—</strong> These are the main regions of the theme (different than Panelizer layout regions. These regions hold the header, main content and footer blocks.</p>
