Fix search block accessibility and modal js error

--- a/web/themes/citizen_patterns/components/_patterns/00-base/global/05-macros/macros.twig
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/global/05-macros/macros.twig
@@ -71,7 +71,7 @@
 	VARIABLES= form, modal</br>
 </p>
 </div>
-{% macro newsletterDisplay() %}form{% endmacro %}
+{% macro newsletterDisplay() %}modal{% endmacro %}
 
 
 
