--- a/web/themes/citizen_patterns/components/_patterns/02-molecules/blocks/search-block/_search-block.scss
+++ b/web/themes/citizen_patterns/components/_patterns/02-molecules/blocks/search-block/_search-block.scss
@@ -128,7 +128,7 @@
 
 
 	//put search form wrapper at top of screen and full width, hide for slide effect
-	.search-form-wrapper{
+	#search-form-wrapper{
 		position: absolute;
 		display: none;
 		z-index: 500;
