--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/03-site/02-site-footer/_site-footer.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/03-site/02-site-footer/_site-footer.scss
@@ -4,6 +4,9 @@
 footer {
 	background: $darkGrey;
 	color: $offWhite;
+	.modal-content{
+		color: $body;
+	}
 	//set style for footer (need inner for fixed footer script)
 	.footer-inner{
 		min-height: 289px;
