--- a/web/themes/citizen_patterns/components/_patterns/02-molecules/blocks/search-block/search-block.twig
+++ b/web/themes/citizen_patterns/components/_patterns/02-molecules/blocks/search-block/search-block.twig
@@ -18,9 +18,9 @@
 
 		{% block searchForm %}
 			<div class="search-form-outer">
-				<div class="t-search-wrapper"><a href="#" class="t-search" role="button" aria-label="toggle-search"><i class="fas fa-search"></i></a></div>
-				<div class="t-search-close"><a href="#" class="close-search" role="button" aria-label="toggle-search-close"><i class="fas fa-times"></i></a><span class="close-text">close</span></div>
-				<div class="search-form-wrapper" aria-expanded="false">
+				<div class="t-search-wrapper"><a href="#" class="t-search" role="button" aria-label="toggle-search" aria-controls="search-form-wrapper"><i class="fas fa-search"></i></a></div>
+				<div class="t-search-close"><a href="#" class="close-search" role="button" aria-label="toggle-search-close" aria-controls="search-form-wrapper"><i class="fas fa-times"></i></a><span class="close-text">close</span></div>
+				<div id="search-form-wrapper" aria-hidden="true">
 					<form action="/site-search" method="get" id="views-exposed-form-site-search-search-results" accept-charset="UTF-8" data-drupal-form-fields="edit-search-api-fulltext">
 
 						{% block searchFormInner %}
