--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/_widgets.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/_widgets.scss
@@ -47,18 +47,17 @@ SECTION LAYOUTS
 	&.background{
 		padding-bottom: $spaceLg;
 		padding-top: $spaceLg;
-	}
-
-	.field-section-title{
-		padding-left: $siteMarginMobile;
-		padding-right: $siteMarginMobile;
+		.layout:not(.layout--twocol-sidebar) &{
+			max-width: $textMax;
+			@include auto;
+		}
 	}
 	.field-section-intro{
-		max-width: $textMax + 40px;
-		padding-left: $siteMarginMobile;
-		padding-right: $siteMarginMobile;
+		.layout:not(.layout--twocol-sidebar) &{
+			max-width: $textMax;
+			@include auto;
+		}
 		margin-bottom: $spaceLg;
-		@include auto;
 	}
 
 	//default section layout
@@ -66,9 +65,7 @@ SECTION LAYOUTS
 		position: relative;
 		z-index: 4;
 		@include safeFlex(row,wrap,null,null);
-		max-width: $contentStop + 40px;
-		padding-left: $siteMarginMobile;
-		padding-right: $siteMarginMobile;
+		max-width: $contentStop;
 		@include auto;
 		& > .section-item{
 			width: 100%;
