Remove calls to Beaker & Bunsen, add support book example view

--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/_widgets.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/_widgets.scss
@@ -9,7 +9,7 @@
 	//override layout padding
 	@include edgeToEdge;
 	// preserve layout padding and prevent backgrounds from overflowing when next to sidebars
-	.beaker .main &,.bunsen .main &{
+	.layout:not(.layout--twocol-sidebar) &{
 		overflow: hidden;
 		@include tab{
 			@include edgeReset;
