--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/image/_image.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/image/_image.scss
@@ -19,7 +19,7 @@
 		}
 		&.large{
 			max-width: 800px;
-			.beaker .main &,.bunsen .main &{
+			.layout:not(.layout--twocol-sidebar) &{
 				max-width: 100%;
 			}
 		}
