--- a/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/layout-builder/_layouts.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/layout-builder/_layouts.scss
@@ -3,12 +3,19 @@
 =================== */
 .layout-content{
 	padding-bottom: 5rem;
+	padding-left: $siteMarginMobile;
+	padding-right: $siteMarginMobile;
 }
 .layout__region{
 	& > *{
 		margin-bottom: $elementSpace;
 	}
 }
+
+/* ONE COLUMN DEFAULT LAYOUT */
+.layout--onecol{
+
+}//end layout-onecol
 
 /* TWO COLUMN SIDEBAR (Macro Variable) */
 .layout--twocol-sidebar{
