Constrain hr to textMax

--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/horizontal-rule/_horizontal-rule.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/horizontal-rule/_horizontal-rule.scss
@@ -3,6 +3,8 @@
 ==================== */
 
 .paragraph--type--horizontal-rule{
+	max-width: $textMax;
+	@include auto;
 	hr{
 		border-top: 1px solid $borderRule;
 	}
