Clear out ;old node theming

--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/_widgets.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/01-widgets/_widgets.scss
@@ -3,19 +3,21 @@
 ===================== */
 
 //widgets parent field
-.field-paragraphs{
-	//use flex to support layout field
-	@include safeFlex(row,wrap,null,null);
+.block-field-paragraphs{
+	overflow: hidden;
 	//override layout padding
 	@include edgeToEdge;
 	// preserve layout padding and prevent backgrounds from overflowing when next to sidebars
-	.layout:not(.layout--twocol-sidebar) &{
-		overflow: hidden;
+	.layout.layout--twocol-sidebar &{
 		@include tab{
 			@include edgeReset;
 		}
+	}
+	.field-paragraphs{
+		//use flex to support layout field
+		@include safeFlex(row,wrap,null,null);
 	}	
-}
+}//end field paragraphs
 
 
 /* ===========
