--- a/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/basic-page/_basic-page.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/basic-page/_basic-page.scss
@@ -4,15 +4,10 @@
 .node-page.node-content{
 	
 	.block-field-banner{
-		margin-bottom: $spaceLg;
-	}
-	.block-field.block-title{
-		@include centerTitle;
+		@include edgeToEdge;
 	}
 
 	.block-body{
-		padding-left: 0;
-		padding-right: 0;
 		max-width: 100%;
 	}
 
