--- a/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/landing-page/_landing-page.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-pages/nodes/landing-page/_landing-page.scss
@@ -7,12 +7,9 @@
 	.block-field-banner{
 		opacity: 0;
 		@include animation('fadeIn 1.2s 1 forwards');
-		margin-bottom: $spaceLg;
+		@include edgeToEdge;
 	}
-	.block-title{
-		@include centerTitle;
-	}
-
+	
 }//end landing-page
 
 
